# InPostReturnLabel

./: README.md  pyproject.toml
example/: config.yaml
src/InPostReturnLabel/: Code.py  Label.py  __about__.py  ipp.py  urf.py
src/InPostReturnLabel/cli/: __init__.py
src/InPostReturnLabel/config/: load.py  schema.py
src/InPostReturnLabel/server/: __init__.py
src/InPostReturnLabel/server/templates/: index.html.j2  print.html.j2
